27_authr_policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: frontend-ingress
  namespace: default
spec:
  selector:
    matchLabels:
      app: helloworld
  action: DENY
  rules:
  - from:
    - source:
        notRequestPrincipals: ["*"]
